--- a/File.html
+++ b/File.html
@@ -85,13 +85,9 @@
 
  <header id="home">
   <div class="container">
-    <div class="header-content">
-      <img src="images/profile.jpg" alt="My Profile Photo" class="profile-photo" />
       <div>
         <h1> Adarsh Lucus</h1>
-        <h3>Aspiring Developer</h3>
         <p>Welcome to my personal portfolio website.</p>
-      </div>
     </div>
   </div>
 </header>
@@ -107,7 +103,7 @@
   </nav>
 
   <section class="hero" id="hero">
-    <img src="" alt="Profile Photo (placeholder)" />
+    <img src="adarsh.jpeg" alt="Profile Photo (placeholder)" />
     <h2>Hello, I'm Adarsh Lucus</h2>
     <p>Passionate about tech, coding, and building impactful solutions.</p>
   </section>
@@ -134,10 +130,6 @@
     <div class="skill-item">
       <img src="icons/vscode.png" alt="VS Code" />
       <p>VS Code</p>
-    </div>
-    <div class="skill-item">
-      <img src="icons/photoshop.png" alt="Photoshop" />
-      <p>Photoshop</p>
     </div>
   </div>
 </section>
@@ -193,9 +185,7 @@
     <p>GitHub: <a href="#">github.com/adarshlucus</a></p>
   </section>
 
-  <footer>
-    <p>&copy; 2025 Adarsh Lucus. All rights reserved.</p>
-  </footer>
+  
 
 </body>
 </html>
