--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Adarsh Lucus | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -19,12 +21,22 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <!-- Hero -->
+  <!-- Hero Section -->
   <section class="hero" id="home">
-    <img src="adarsh.jpeg" alt="Adarsh Lucus" />
-    <h1>Hello, I'm Adarsh Lucus</h1>
-    <p>Cybersecurity Student | Tech Enthusiast | Developer</p>
-    <a href="#contact" class="btn">Contact Me</a>
+    <div class="hero-content">
+      <p class="intro">Hello!</p>
+      <h1>I'm <span>Adarsh Lucus</span></h1>
+      <h2>Cybersecurity Student | Tech Enthusiast | Developer</h2>
+
+      <div class="hero-buttons">
+        <a href="#contact" class="btn primary">Hire Me</a>
+        <a href="#projects" class="btn secondary">My Works</a>
+      </div>
+    </div>
+
+    <div class="hero-image">
+      <img src="images/Adarsh Lucus.png" alt="Adarsh Lucus portrait" />
+    </div>
   </section>
 
   <!-- About -->
